# news-trade

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  FIX_MULTIPLE_ORDER.md  FUTURE.md  ISSUES.md  README.md  create_github_issues.py  langgraph.json  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 6dae9e7efe75_initial_schema.py  a1b2c3d4e5f6_drop_watchlist_selections.py
docs/: agent-chain-diagram.md  etoro-broker-integration.md
docs/architecture/: adr-001-dynamic-watchlist.md  deployment-readiness.md  dynamic-watchlist-spec.md  event-driven-signal-layer.md  sentiment-llm-routing-spec.md  tradingagents-integration-spec.md
src/news_trade/: __init__.py  config.py  main.py
src/news_trade/agents/: CLAUDE.md  __init__.py  base.py  earnings_calendar.py  earnings_ticker.py  execution.py  expiry_scanner.py  halt_handler.py  market_data.py  news_ingestor.py  orchestrator.py  portfolio_fetcher.py  risk_manager.py  (+2 more)
tests/: CLAUDE.md  test_confidence_scorer.py  test_earnings_calendar.py  test_earnings_ticker.py  test_estimates_renderer.py  test_execution.py  test_expiry_scanner.py  test_finnhub_estimates_provider.py  test_fmp_estimates_provider.py  test_halt_handler.py  test_llm_client.py  test_models.py  test_news_ingestor.py  test_pipeline.py  test_portfolio_fetcher_agent.py  test_providers.py  test_rate_limiting.py  test_risk_rules.py  test_session_reporter.py  test_signal_generator.py  test_stage1_repository.py  test_startup_selector.py  test_telegram_bot.py  test_watchlist_manager.py
(+55 files in other folders)
