[project]
name = "news-trade"
version = "0.1.0"
description = "Multi-agent news-driven trading system using LangGraph and Claude"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.39,<1",
    "alpaca-py>=0.30,<1",
    "langgraph>=0.2,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "redis>=5.0,<6",
    "sqlalchemy>=2.0,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.11",
]

[project.scripts]
news-trade = "news_trade.main:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_trade"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
